fixed left align

--- a/css/styled.css
+++ b/css/styled.css
@@ -7,7 +7,8 @@
   width: 100%;
   padding-top: 10px;
   z-index: 1;
-  font-size: 18px; }
+  font-size: 18px;
+  margin-left: -15px; }
   .fixed-nav-bar a {
     color: #aaa; }
   .fixed-nav-bar a:hover {
@@ -27,6 +28,7 @@ main {
       font-size: 63px; }
 
 .primary-btn {
-  background-color: #286090; }
+  background-color: #286090;
+  margin-left: 15px; }
 
 /*# sourceMappingURL=styled.css.map */
