--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,6 +10,7 @@
   a {
     color: #aaa;}
     font-size: 18px;
+    margin-left: -15px;
   & a:hover {
       color: white;
       text-decoration: none;}
@@ -32,4 +33,5 @@ main {
 
 .primary-btn {
   background-color: #286090;
+  margin-left: 15px;
 }
